# hrd-vorlage

./: .gitignore  LICENSE  Makefile  README.md  science_astronomy_hrd.tex  setup.cfg
scripts/: plot_hrd.py  star_table.py  stars.py
tests/: conftest.py  test_plots.py
