[metadata]
name = hrd_vorlage
version = 2025.8.0
author = Christian W. Brock
description = Deutschsprachige Wissenschaftsvermittlung mittels Hertzsprung-Russel-Diagramm
long_description = file: README.md
long_description_content_type = text/markdown
license = BSD 3-Clause License
classifiers = 
    Intended Audience :: Science/Research
    Topic :: Scientific/Engineering :: Astronomy
    Operating System :: OS Independent
    Programming Language :: Python :: 3
    License :: OSI Approved :: BSD License

[options]
packages = find:
python_requires = >=3.5
install_requires =
    matplotlib

[options.entry_points]
console_scripts =
    hrd_star_table = scripts.star_table:main
    hrd_plot_empty_hrd = scripts.plot_hrd:empty
    hrd_plot_full_hrd = scripts.plot_hrd:full
